# brother-ptouch-automation

./: .gitignore  CLAUDE.md  CREDITS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
assets/fonts/: LICENSE-DejaVu.txt
assets/fonts/bitmap/spleen/: spleen-12x24.otb  spleen-16x32.otb  spleen-6x12.otb  spleen-8x16.otb
assets/icons/: LICENSE-Lucide.txt
docs/: creating-a-pack.md  creating-a-preset.md  cutting-and-batches.md  implementation-plan.md  index.html
docs/images/drafts/: lp-architecture.json  lp-batch-flow.json  lp-render-pipeline.json
docs/proposals/: 0001-qr-context-linking.md
research/: brother-raster-protocol.md  encoder-validation.md  sdk-comparison.md
scripts/: render_sharpening_previews.py
skill/: SKILL.md
src/label_printer/: __init__.py  cli.py  constants.py  service.py  state.py  status.py  tape.py
src/label_printer/engine/: __init__.py  compose.py  fonts.py  icons.py  image.py  layout.py  qr.py  raster.py  wire.py
src/label_printer/templates/: __init__.py  base.py  pack.py  preset.py  registry.py
src/label_printer/templates/calibration/: __init__.py  cert_id.py  instrument_cal.py  presets.toml  thermometer_cal.py
src/label_printer/templates/electronics/: __init__.py  cable_flag.py  cable_flag_qr.py  component_bin.py  presets.toml  psu_polarity.py
src/label_printer/templates/garden/: __init__.py  plant_tag.py  presets.toml  row_marker.py  seed_packet.py
src/label_printer/templates/home_inventory/: __init__.py  moving_box.py  presets.toml  storage_bin.py  warranty.py
src/label_printer/templates/kitchen/: __init__.py  freezer.py  leftover.py  pantry_jar.py  presets.toml  spice.py
src/label_printer/templates/media/: __init__.py  archive_box.py  bookshelf_tag.py  cd_record.py  presets.toml
src/label_printer/templates/networking/: __init__.py  patch_port.py  presets.toml  rack_unit.py  wap_location.py
src/label_printer/templates/pet/: __init__.py  collar_backup.py  food_bowl.py  med_schedule.py  presets.toml
src/label_printer/templates/three_d_printing/: __init__.py  filament_spool.py  presets.toml  print_bin.py  tool_tag.py
src/label_printer/templates/travel/: __init__.py  gear_bag.py  luggage_tag.py  power_bank.py  presets.toml
src/label_printer/templates/utility/: __init__.py  qr.py  (+1 more)
src/label_printer/transport/: __init__.py  base.py  dryrun.py  network.py  snmp.py
tests/: conftest.py  test_batch.py  test_cli.py  test_compose.py  test_icons.py  test_network_transport.py  test_packs.py  test_raster_encoder.py  test_service.py  test_sharpening.py  test_snmp.py  test_status.py  test_templates.py  test_utility_templates.py  test_wire.py
(+6 files in other folders)
