[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "label-printer"
version = "0.2.0"
description = "Automation flow for the Brother PT-P750W label maker (also supports PT-P710BT and PT-E550W)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pillow>=10.0",
    "packbits>=0.6",
    "click>=8.1",
]

[project.optional-dependencies]
usb = ["pyusb>=1.2"]
bluetooth = ["pybluez>=0.23; platform_system == 'Linux'"]
service = ["fastapi>=0.110", "uvicorn>=0.27"]
barcode = ["python-barcode>=0.15", "qrcode>=7.4"]
icons = ["cairosvg>=2.7"]
test = [
    "pytest>=8.0",
    "ruff>=0.3",
    "httpx>=0.27",
    "cairosvg>=2.7",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "httpx>=0.27",
    "cairosvg>=2.7",
    "brother_pt @ git+https://github.com/treideme/brother_pt.git",
]

[project.scripts]
lp = "label_printer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
label_printer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "hardware: requires a physical PT-P750W (or P710BT / E550W) attached (skipped by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]
